# T07-ADS-Object_Detection_and_Avoidance

./: .gitignore  CMakeLists.txt  PROJECT_LAYOUT.MD  README.com  docker-compose.yml  mpc.cpp  zmq_publisher.py  zmq_subscriber.py
MainCar/srcs/Controller/: CMakeLists.txt  README.md
MainCar/srcs/Controller/includes/: JetCar.hpp  devices.hpp
MainCar/srcs/MainCar/: CMakeLists.txt
MainCar/srcs/MainCar/includes/: JetSnailsCar.hpp
MainCar/srcs/MainCar/includes/Subscribers/: VehicleSubscriber.hpp
MainCar/srcs/MainCar/sources/: main.cpp
alternatives/: mpc_socket.cpp
jetson_ads-stack-cpp/docs/: start_car.md
jetson_ads-stack-cpp/docs/ADR/: ADR-Control-Methodology-JetRacer.md
jetson_ads-stack-cpp/docs/cluster/: Doxyfile  Readme.md
jetson_ads-stack-cpp/docs/control/: ADR-Control-Methodology-JetRacer.markdown  ADR-Control-Methodology-JetRacer.md  CMakeLists.txt  Characteristics-Acceleration.md  Characteristics-Speed.md  Characteristics-Steering.md  JetRacer-Acceleration-Characteristics.markdown  JetRacer-Speed-Characteristics.markdown  Lane_Detection_Output.md  MPC_COMPILE.MD  MPC_local_explained.md  PID_tunning_instructions.MD  PrinciplesOfSteeringControl.md
jetson_ads-stack-cpp/docs/cuda/: opencv-cuda.md
jetson_ads-stack-cpp/docs/setup-nano/: Controller.md  Dashboard.mp
jetson_ads-stack-cpp/include/Controller/: Controller.hpp  JetCar.hpp
jetson_ads-stack-cpp/include/Controller/includes/: TimeTracker.hpp
jetson_ads-stack-cpp/include/MainCar/: Odometer.hpp
jetson_ads-stack-cpp/include/MainCar/Subscribers/: VehicleSubscriber.hpp
jetson_ads-stack-cpp/include/control/: MPC.hpp  MPC_local_coordinates copy 2.md  MPC_local_coordinates copy.md  SpeedPIDTuner.hpp
jetson_ads-stack-cpp/include/ipc/: SocketClient.hpp
jetson_ads-stack-cpp/ml/: README.md
jetson_ads-stack-cpp/ml/control/: autonomous_drive_lstm.py  record_data_lstm.py  train_model_lstm.py
jetson_ads-stack-cpp/ml/object_detection/: README.md  dataset.py  model_object.py  object_detection.md  train_detection_only.py  utils.py  yoloLoss.py
jetson_ads-stack-cpp/src/Controller/: Controller.cpp  LaneDetector.cpp  toolchain-aarch64.cmake
jetson_ads-stack-cpp/src/MainCar/sources/: main.cpp
jetson_ads-stack-cpp/src/control/: MPC.cpp  MPC_ML_trainer.py  MPC_local_explained.md  SpeedPIDController.cpp  SpeedPIDTuner.cpp  allMPC.cpp  allTogether.cpp  mainMPC.cpp  mainPIDautoTuner.cpp
jetson_ads-stack-cpp/src/digital_cluster/: CMakeLists.txt  CMakeLists.txt.user.3f2d7c9  CMakeLists.txt.user.4a72678  System.cpp  System.h  main.cpp  zmqreader.cpp  zmqreader.h
jetson_ads-stack-cpp/src/digital_cluster/tests/: CMakeLists.txt  test_qml_integration.cpp  test_system.cpp  test_zmqreader.cpp  test_zmqreader_copy.cpp  test_zmqreader_copy1.cpp
jetson_ads-stack-cpp/src/digital_cluster/tests/coverage_report/: index-sort-f.html  index-sort-l.html  index.html
jetson_ads-stack-cpp/src/digital_cluster/tests/coverage_report/Digital_Cluster/: System.cpp.func-sort-c.html  System.cpp.func.html  System.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  zmqreader.cpp.func-sort-c.html  zmqreader.cpp.func.html  zmqreader.cpp.gcov.html
jetson_ads-stack-cpp/src/digital_cluster/ui/CenterPanel/: Bottombar.qml  Bottombar_old.qml  LeftColumnCenterPanel.qml  Menu.qml  Navigation.qml  SignsLeftCenterPanel_old.qml
jetson_ads-stack-cpp/src/digital_cluster/ui/LeftPanel/Centercolumn/: CenterColumn.qml  Right.qml  Route.qml  Route_old.qml  Route_v1.qml  Route_v2.qml  Signsright.qml
jetson_ads-stack-cpp/src/digital_cluster/ui/LeftPanel/Leftcolumn/: Gear.qml
jetson_ads-stack-cpp/src/digital_cluster/ui/LeftPanel/Rightcolumn/: List_listview.qml  List_old.qml  Media_old.qml  Navigation_menu.qml  Navigation_right_Mapview.qml  RightColumn.qml  RightColumn_old.qml  Settings.qml
jetson_ads-stack-cpp/src/digital_cluster/ui/Play/: Buttons_old.qml  Buttons_old_v1.qml  DPad_old.qml  DPad_old_v1.qml
jetson_ads-stack-cpp/src/ipc/: SocketClient.cpp
jetson_ads-stack-cpp/src/lane_detection/: LaneDetect_af.cpp
jetson_ads-stack-cpp/src/tests/kinetics/: allPID.cpp  mainMPC.cpp
mpc_local_coordinates/: mcp_local.cpp
mpc_local_coordinates/ml_mpc_model/: ml_mpc_model.py
setup-nano/: Changes.md  Controller.md  Covesa.md  Docker.md  MCP2515.md  Zoo.md
setup-nano/tools/: kernel_tegra210-p3448-0000-p3449-0000-b00-user-custom.dts  upgrade-jetson.sh
speedController/: 1speedPIDControlerl.cpp  1speedPID_auto_tuner_aux.cpp  PID_TUNE.MD  SpeedPIDTuner.cpp  SpeedPIDTuner.hpp  main.cpp  mainPIDautoTuner.cpp  speedPIDController.hpp  speedPID_auto_tuner.cpp  speedPID_auto_tuner_main.cpp
srcs/Controller/: CMakeLists.txt  CMakeLists.txt.bak  Dockerfile
srcs/Controller/includes/: Controller.hpp  Controller.hpp.bak  Controller.hppes  LaneDetection.hpp  LaneDetector.hpp  LaneDetector.hpp.bak  devices.hpp
srcs/Controller/sources/: Controller.cpp  Controller.cpp.bak  Controller.cpp.bak1  JetCar.cpp  LaneDetection.cpp  LaneDetector.cpp  LaneDetector.cpp.bak  LaneDetector.cpp.old.nbak  devices.cpp  main-original.cpp  main.cpp
srcs/Dashboard/backend/: app.py
srcs/Dashboard/frontend/: index.html
srcs/MainCar/: Dockerfile  Readme.md
srcs/MainCar/includes/Subscribers/: Battery.hpp
srcs/MainCar/sources/: main.cpp
srcs/MainCar/sources/Car/: JetSnailsCar.cpp
srcs/MainCar/sources/Sensors/: Odometer.cpp  SpeedSensor.cpp
srcs/Testers/: CMakeLists.txt  Dockerfile
srcs/Testers/includes/: Controller.hpp  DebugTools.hpp  SpeedPIDTuner.hpp  SpeedSubscriber.hpp
srcs/Testers/sources/: Controller.cpp  DebugTools.cpp  JetCar.cpp  SpeedPIDTuner.cpp  main.cpp
